[gd_scene load_steps=7 format=3 uid="uid://cuh2x6gk3mlgn"]

[ext_resource type="Script" path="res://scripts/player/building_manager.gd" id="1_gdwe6"]
[ext_resource type="PackedScene" uid="uid://dbjlp23yoipod" path="res://scenes/block_building/placers/block_placer.tscn" id="2_r8cq1"]
[ext_resource type="PackedScene" uid="uid://d2ajujxfkdyex" path="res://scenes/block_building/placers/reinforced_block_placer.tscn" id="3_e20ug"]
[ext_resource type="PackedScene" uid="uid://b30v3x1dn2ltf" path="res://scenes/block_building/placers/mine_placer.tscn" id="4_lhqbb"]
[ext_resource type="PackedScene" uid="uid://bmdgopa2w8bo7" path="res://scenes/block_building/placers/explosive_block_placer.tscn" id="6_tj3m1"]
[ext_resource type="PackedScene" uid="uid://cil5dsc2jopt2" path="res://scenes/block_building/placers/turret_placer.tscn" id="7_fpy8a"]

[node name="BuildingManager" type="Node3D"]
script = ExtResource("1_gdwe6")

[node name="RightPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.2, -0.35)

[node name="BlockPlacer" parent="RightPosition" instance=ExtResource("2_r8cq1")]

[node name="ReinforcedBlockPlacer" parent="RightPosition" instance=ExtResource("3_e20ug")]

[node name="MinePlacer" parent="RightPosition" instance=ExtResource("4_lhqbb")]

[node name="ExplosiveBlockPlacer" parent="RightPosition" instance=ExtResource("6_tj3m1")]

[node name="TurretPlacer" parent="RightPosition" instance=ExtResource("7_fpy8a")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
